Fixes for dark mode

--- a/css/components/curtain.css
+++ b/css/components/curtain.css
@@ -37,4 +37,7 @@
     [data-component~="curtain"] {
         background: black;
     }
+    [data-component~="curtain"] .icofont-twitter {
+        color: var(--twitter-blue-link);
+    }
 }
