--- a/css/reset.css
+++ b/css/reset.css
@@ -284,11 +284,16 @@ textarea {
     box-sizing: border-box;
 }
 
+html {
+    background: var(--twitter-blue-link);
+}
+
 body {
     overflow: hidden;
 }
 
 #viewport {
+    background: white;
     padding: 15px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     display: flex;
@@ -302,6 +307,9 @@ body {
     body {
         background: black;
         color: white;
+    }
+    #viewport {
+        background: black;
     }
      :root {
         --twitter-black-text: white;
